--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@gsap/react": "^2.1.2",
     "gsap": "^3.13.0",
     "next": "15.5.3",
+    "next-view-transitions": "^0.3.4",
+    "nextra": "^4.6.0",
+    "nextra-theme-blog": "^4.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0"
