--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.2",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
     "next": "15.5.3",
     "next-view-transitions": "^0.3.4",
     "nextra": "^4.6.0",
