--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "responsive-gsap": "^1.0.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
   },
