feat: implement build-time registry generation system
- Add scripts/index-registry.ts for build-time registry generation
- Generate static JSON files in public/r/paul/blocks/ with embedded content
- Add postbuild script to automatically run registry generation
- Remove runtime API route in favor of static files (better performance)
- Add tsx dev dependency for TypeScript script execution
- Update .gitignore to exclude generated public/r/ directory
- Matches ui.phucbm.com architecture pattern

Benefits:
- Static files served by CDN (faster, better caching)
- No server-side processing on each request
- Content embedded at build time
- Fully compatible with shadcn CLI

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postbuild": "pnpm build:registry",
+    "build:registry": "pnpm index-registry",
+    "index-registry": "tsx scripts/index-registry.ts"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
@@ -33,6 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
